--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://backend:3001/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
